--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 autopep8==2.0.1
 click==8.1.3
 dash==2.8.1
+dash-bootstrap-components==1.5.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
